<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:background="@drawable/green_line_bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_weight="28"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/h2xx_tv_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h2xx_loss_report_title"
                android:textColor="#000000"
                android:textSize="42sp" />

            <Button
                android:id="@+id/btn_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/selector_btn_question" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:layout_weight="72"
            android:gravity="center_vertical|right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/h2xx_btn_back"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector_btn_back" />

            <Button
                android:id="@+id/h2xx_btn_view_history"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="91dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/btn_green_background_selector"
                android:text="@string/header_history"
                android:textColor="@drawable/text_color_white_green_selector"
                android:textSize="28sp" />

            <Button
                android:id="@+id/h2xx_btn_stop_register"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="91dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/btn_green_background_selector"
                android:text="@string/header_stop_register"
                android:textColor="@drawable/text_color_white_green_selector"
                android:textSize="28sp" />

            <Button
                android:id="@+id/h2xx_btn_submit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="91dp"
                android:background="@drawable/btn_green_background_selector"
                android:text="@string/header_submit"
                android:textColor="@drawable/text_color_white_green_selector"
                android:textSize="28sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>